@@ -4,6 +4,15 @@ repoze.who Changelog
 After 2.0a2 (unreleased)
 -----------------------
 
+- Help default request classifier cope with xml submissions with an
+  explicit charset defined: http://bugs.repoze.org/issue145 (Lorenzo
+  M. Catucci)
+
+- Correct the handling of type and subtype when matching an XML post
+  to ``xmlpost`` in the default classifier, which, according to RFC
+  2045, must be matched case-insensitively:
+  http://bugs.repoze.org/issue145 (Lorenzo M. Catucci)
+
 - Added ``repoze.who.config:make_api_factory_with_config``, a convenience
   method for applications which want to set up their own API Factory from
   a configuration file.
